--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html" class="active">Biografía</a></li>
-          <li class="dropdown"><a href="albums.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Álbumes</a></li>
               <li><a href="videos.html">Videoclips</a></li>
@@ -62,7 +62,8 @@
               </li>
             </ul>
           </li>
-          <span style="color: var(--nav-color);">|</span>
+          <!-- Separador, se oculta en dispositivos móviles -->
+          <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
@@ -94,7 +95,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
+          <div class="col-lg-4 artist-image">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
