--- a/discography.html
+++ b/discography.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Kendrick Lamar - Hip hop y Rap</title>
+  <title>Discografía - Kendrick Lamar</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body class="index-page">
+<body class="gallery-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
@@ -48,9 +48,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Inicio<br></a></li>
+          <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Álbumes</a></li>
               <li><a href="videos.html">Videoclips</a></li>
@@ -75,19 +75,19 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
-    <section id="hero" class="hero section">
-
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
-            <h2><span>Presentando</span><span class="underlight">Kendrick Lamar</span></h2>
-            <p>Algunos de sus momentos más icónicos, álbumes y colaboraciones que han definido su carrera.</p>
+    <!-- Page Title -->
+    <div class="page-title" data-aos="fade">
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-8">
+              <h1>Discografía visual</h1>
+              <p class="mb-0">Colección de imágenes relacionadas con Kendrick Lamar: portadas de álbumes, fotografías de conciertos, sesiones de estudio y material detrás de escena que ilustran su trayectoria en el hip hop.</p>
+            </div>
           </div>
         </div>
       </div>
-
-    </section><!-- /Hero Section -->
+    </div><!-- End Page Title -->
 
     <!-- Gallery Section -->
     <section id="gallery" class="gallery section">
