--- a/starter-page.html
+++ b/starter-page.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="albums.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Álbumes</a></li>
               <li><a href="videos.html">Videoclips</a></li>
@@ -62,8 +62,9 @@
               </li>
             </ul>
           </li>
-          <span style="color: var(--nav-color);">|</span>
-          <li><a href="services.html" class="active">Servicios</a></li>
+          <!-- Separador, se oculta en dispositivos móviles -->
+          <span class="nav-separator">|</span>
+          <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
