--- a/albums.html
+++ b/albums.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Discografía - Kendrick Lamar</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Recorrido por los álbumes más relevantes de Kendrick Lamar: evolución artística, temas recurrentes y colaboraciones destacadas.">
+  <meta name="keywords" content="Kendrick Lamar, discografía, álbumes, hip hop, rap, música">
 
   <!-- Favicons -->
   <link href="assets/img/logo.png" rel="icon">
@@ -36,13 +36,13 @@
   ======================================================== -->
 </head>
 
-<body class="gallery-page">
+<body class="gallery-single-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/img/logo.png" alt="ArtistFolio logo">
         <h1 class="sitename">ArtistFolio</h1>
       </a>
 
@@ -50,9 +50,9 @@
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="albums.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="albums.html">Álbumes</a></li>
+              <li><a href="albums.html" class="active">Álbumes</a></li>
               <li><a href="videos.html">Videoclips</a></li>
               <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
@@ -62,7 +62,8 @@
               </li>
             </ul>
           </li>
-          <span style="color: var(--nav-color);">|</span>
+          <!-- Separador, se oculta en dispositivos móviles -->
+          <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
@@ -80,106 +81,118 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Discografía visual</h1>
-              <p class="mb-0">Colección de imágenes relacionadas con Kendrick Lamar: portadas de álbumes, fotografías de conciertos, sesiones de estudio y material detrás de escena que ilustran su trayectoria en el hip hop.</p>
+              <h1>Carrera musical — Discografía seleccionada</h1>
+              <p class="mb-0">Un recorrido por los álbumes y proyectos más influyentes de Kendrick Lamar: desde sus primeros mixtapes hasta sus trabajos más recientes, con contexto sobre temas, producciones y colaboraciones.</p>
             </div>
           </div>
         </div>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Gallery Section -->
-    <section id="gallery" class="gallery section">
+    <!-- Gallery Details Section -->
+    <section id="gallery-details" class="gallery-details section">
 
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up">
 
-        <div class="row gy-4 justify-content-center">
+        <div class="portfolio-details-slider swiper init-swiper">
+          <script type="application/json" class="swiper-config">
+            {
+              "loop": true,
+              "speed": 600,
+              "autoplay": {
+                "delay": 5000
+              },
+              "slidesPerView": "auto",
+              "navigation": {
+                "nextEl": ".swiper-button-next",
+                "prevEl": ".swiper-button-prev"
+              },
+              "pagination": {
+                "el": ".swiper-pagination",
+                "type": "bullets",
+                "clickable": true
+              }
+            }
+          </script>
+          <div class="swiper-wrapper align-items-center">
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/topimpabutterfly.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/topimpabutterfly.webp" title="To Pimp a Butterfly" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/overlydedicated.webp" alt="Overly Dedicated — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/goodkidmaadcity.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/goodkidmaadcity.webp" title="Good Kid, M.A.A.D City" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/section80.webp" alt="Section.80 — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/damn.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/damn.webp" title="DAMN." class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/goodkidmaadcity.webp" alt="good kid, m.A.A.d city — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/mrmorale&thebigsteppers.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/mrmorale&thebigsteppers.webp" title="Mr. Morale & The Big Steppers" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/untitledunmastered.webp" alt="untitled unmastered. — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/section80.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/section80.webp" title="Section.80" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/damn.webp" alt="DAMN. — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/gnx.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/gnx.webp" title="GNX" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/mrmorale&thebigsteppers.webp" alt="Mr. Morale & The Big Steppers — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/untitledunmastered.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/untitledunmastered.webp" title="Untitled Unmastered" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="assets/img/gallery/albums/gnx.webp" alt="Proyecto visual — Kendrick Lamar">
             </div>
-          </div><!-- End Gallery Item -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/gallery/albums/overlydedicated.webp" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/albums/overlydedicated.webp" title="Overly Dedicated" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <div class="row justify-content-between gy-4 mt-4">
+
+          <div data-aos="fade-up">
+            <div class="portfolio-description">
+              <h2>Discografía destacada y evolución artística</h2>
+
+              <p>
+                Kendrick Lamar emergió desde la escena de Compton con mixtapes que mostraban un talento precoz para la narrativa y la métrica. Proyectos tempranos como <strong>Overly Dedicated</strong> y <strong>Section.80</strong> ya adelantaban su preocupación por temas sociales y personales.
+              </p>
+
+              <p>
+                El salto a la fama vino con <strong>good kid, m.A.A.d city</strong> (2012), un álbum conceptual que mezcla storytelling cinematográfico, producción cuidada y colaboraciones clave. Con él, Kendrick consolidó su voz única en el hip hop contemporáneo.
+              </p>
+
+              <p>
+                En trabajos posteriores como <strong>To Pimp a Butterfly</strong> (inspirado por jazz, funk y soul) y <strong>DAMN.</strong>, el artista profundizó en cuestiones de identidad, raza, poder y trauma, recibiendo reconocimiento crítico y premios importantes. Su capacidad para reinventarse sin perder coherencia temática es una de sus señas de identidad.
+              </p>
+
+              <div class="testimonial-item">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>"Kendrick tiene una visión rara: combina letras íntimas con arreglos sonoros ambiciosos. Trabajar en su música es empujar los límites del género."</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+                <div>
+                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Colaborador">
+                  <h3>The Alchemist</h3>
+                  <h4>Productor</h4>
+                </div>
               </div>
+
+              <p>
+                Además de su labor en estudio, Kendrick ha influido en la cultura musical por su enfoque conceptual y su compromiso con las historias de su comunidad. Proyectos recientes como <strong>Mr. Morale & The Big Steppers</strong> muestran una madurez artística que combina introspección personal y ambición sonora.
+              </p>
+
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Gallery Section -->
+    </section><!-- /Gallery Details Section -->
 
   </main>
 
