--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html">Inicio<br></a></li>
           <li><a href="about.html">Biografía</a></li>
-          <li class="dropdown"><a href="albums.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="albums.html">Álbumes</a></li>
               <li><a href="videos.html">Videoclips</a></li>
@@ -62,7 +62,8 @@
               </li>
             </ul>
           </li>
-          <span style="color: var(--nav-color);">|</span>
+          <!-- Separador, se oculta en dispositivos móviles -->
+          <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
           <li><a href="contact.html" class="active">Contacto</a></li>
         </ul>
