--- a/about.html
+++ b/about.html
@@ -52,12 +52,12 @@
           <li><a href="about.html" class="active">Biografía</a></li>
           <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="albums.html">Álbumes</a></li>
+              <li><a href="albums.html">Albums</a></li>
               <li><a href="videos.html">Videoclips</a></li>
               <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Letras destacadas</a></li>
-                  <li><a href="#">Premios</a></li>
+                  <li><a href="letras.html">Letras destacadas</a></li>
+                  <li><a href="premios.html">Premios</a></li>
                 </ul>
               </li>
             </ul>
