--- a/services.html
+++ b/services.html
@@ -52,12 +52,12 @@
           <li><a href="about.html">Biografía</a></li>
           <li class="dropdown"><a href="discography.html"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="albums.html">Álbumes</a></li>
+              <li><a href="albums.html">Albums</a></li>
               <li><a href="videos.html">Videoclips</a></li>
               <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Letras destacadas</a></li>
-                  <li><a href="#">Premios</a></li>
+                  <li><a href="letras.html">Letras destacadas</a></li>
+                  <li><a href="premios.html">Premios</a></li>
                 </ul>
               </li>
             </ul>
@@ -96,18 +96,10 @@
 
         <div class="row gy-4">
 
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
-              <h4><a href="" class="stretched-link">Análisis de letras</a></h4>
-              <p>Estudio detallado de las letras: símbolos, referencias culturales y contextos personales detrás de cada canción.</p>
-            </div>
-          </div><!-- End Service Item -->
-
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
-              <h4><a href="" class="stretched-link">Discografía comentada</a></h4>
+              <h4><a href="albums.html" class="stretched-link">Discografía comentada</a></h4>
               <p>Recorridos por los álbumes clave, su trama conceptual y la evolución sonora hasta proyectos posteriores.</p>
             </div>
           </div><!-- End Service Item -->
@@ -115,16 +107,24 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Producción y colaboraciones</a></h4>
-              <p>Análisis de beats, productores y colaboraciones: cómo se construyen los paisajes sonoros que acompañan sus narrativas.</p>
+              <h4><a href="videos.html" class="stretched-link">Videos y colaboraciones</a></h4>
+              <p>Exploración de videoclips y colaboraciones con otros artistas, destacando su influencia y estilo visual.</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item position-relative">
+              <div class="icon"><i class="bi bi-activity icon"></i></div>
+              <h4><a href="letras.html" class="stretched-link">Análisis de letras</a></h4>
+              <p>Estudio detallado de las letras: símbolos, referencias culturales y contextos personales detrás de cada canción.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Charlas y presentaciones</a></h4>
-              <p>Conferencias y presentaciones sobre su legado, impacto social y técnicas creativas.</p>
+              <h4><a href="premios.html" class="stretched-link">Premios y reconocimientos</a></h4>
+              <p>Resumen de los premios y reconocimientos recibidos a lo largo de su carrera, destacando su impacto en la industria musical.</p>
             </div>
           </div><!-- End Service Item -->
 
