--- a/albums.html
+++ b/albums.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Discografía - Kendrick Lamar</title>
+  <title>Albums - Kendrick Lamar</title>
   <meta name="description" content="Recorrido por los álbumes más relevantes de Kendrick Lamar: evolución artística, temas recurrentes y colaboraciones destacadas.">
   <meta name="keywords" content="Kendrick Lamar, discografía, álbumes, hip hop, rap, música">
 
@@ -52,12 +52,12 @@
           <li><a href="about.html">Biografía</a></li>
           <li class="dropdown"><a href="discography.html" class="active"><span>Discografía</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="albums.html" class="active">Álbumes</a></li>
+              <li><a href="albums.html" class="active">Albums</a></li>
               <li><a href="videos.html">Videoclips</a></li>
               <li class="dropdown"><a href="#"><span>Más</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Letras destacadas</a></li>
-                  <li><a href="#">Premios</a></li>
+                  <li><a href="letras.html">Letras destacadas</a></li>
+                  <li><a href="premios.html">Premios</a></li>
                 </ul>
               </li>
             </ul>
@@ -81,7 +81,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Carrera musical — Discografía seleccionada</h1>
+              <h1>Carrera musical</h1>
               <p class="mb-0">Un recorrido por los álbumes y proyectos más influyentes de Kendrick Lamar: desde sus primeros mixtapes hasta sus trabajos más recientes, con contexto sobre temas, producciones y colaboraciones.</p>
             </div>
           </div>
@@ -90,109 +90,86 @@
     </div><!-- End Page Title -->
 
     <!-- Gallery Details Section -->
-    <section id="gallery-details" class="gallery-details section">
+  <section id="gallery-details" class="gallery-details section">
+    <div class="container" data-aos="fade-up">
 
-      <div class="container" data-aos="fade-up">
+      <!-- GRID CORRECTO -->
+      <div class="row gy-4">
 
-        <div class="portfolio-details-slider swiper init-swiper">
-          <script type="application/json" class="swiper-config">
-            {
-              "loop": true,
-              "speed": 600,
-              "autoplay": {
-                "delay": 5000
-              },
-              "slidesPerView": "auto",
-              "navigation": {
-                "nextEl": ".swiper-button-next",
-                "prevEl": ".swiper-button-prev"
-              },
-              "pagination": {
-                "el": ".swiper-pagination",
-                "type": "bullets",
-                "clickable": true
+        <!-- GALERÍA 33% -->
+        <div class="col-lg-4">
+          <div class="portfolio-details-slider swiper init-swiper">
+
+            <script type="application/json" class="swiper-config">
+              {
+                "loop": true,
+                "speed": 600,
+                "autoplay": { "delay": 5000 },
+                "slidesPerView": "auto",
+                "navigation": {
+                  "nextEl": ".swiper-button-next",
+                  "prevEl": ".swiper-button-prev"
+                },
+                "pagination": {
+                  "el": ".swiper-pagination",
+                  "clickable": true
+                }
               }
-            }
-          </script>
-          <div class="swiper-wrapper align-items-center">
+            </script>
 
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/overlydedicated.webp" alt="Overly Dedicated — Kendrick Lamar">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/overlydedicated.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/section80.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/goodkidmaadcity.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/untitledunmastered.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/damn.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/mrmorale&thebigsteppers.webp" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/gallery/albums/gnx.webp" alt=""></div>
             </div>
 
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/section80.webp" alt="Section.80 — Kendrick Lamar">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/goodkidmaadcity.webp" alt="good kid, m.A.A.d city — Kendrick Lamar">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/untitledunmastered.webp" alt="untitled unmastered. — Kendrick Lamar">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/damn.webp" alt="DAMN. — Kendrick Lamar">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/mrmorale&thebigsteppers.webp" alt="Mr. Morale & The Big Steppers — Kendrick Lamar">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/gallery/albums/gnx.webp" alt="Proyecto visual — Kendrick Lamar">
-            </div>
-
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
           </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-pagination"></div>
         </div>
 
-        <div class="row justify-content-between gy-4 mt-4">
+        <!-- TEXTO 67% -->
+        <div class="col-lg-8">
+          <div class="portfolio-description">
+            <h2>Discografía destacada y evolución artística</h2>
 
-          <div data-aos="fade-up">
-            <div class="portfolio-description">
-              <h2>Discografía destacada y evolución artística</h2>
+            <p>
+              Kendrick Lamar emergió desde la escena de Compton con mixtapes que mostraban un talento precoz para la narrativa y la métrica.
+            </p>
 
+            <p>
+              El salto a la fama vino con <strong>good kid, m.A.A.d city</strong>, un álbum conceptual que consolidó su voz única.
+            </p>
+
+            <p>
+              En trabajos posteriores como <strong>DAMN.</strong> y <strong>Mr. Morale & The Big Steppers</strong>, profundizó en identidad y trauma.
+            </p>
+
+            <div class="testimonial-item">
               <p>
-                Kendrick Lamar emergió desde la escena de Compton con mixtapes que mostraban un talento precoz para la narrativa y la métrica. Proyectos tempranos como <strong>Overly Dedicated</strong> y <strong>Section.80</strong> ya adelantaban su preocupación por temas sociales y personales.
+                <i class="bi bi-quote quote-icon-left"></i>
+                <span>"Kendrick tiene una visión rara: combina letras íntimas con arreglos sonoros ambiciosos. Trabajar en su música es empujar los límites del género."</span>
+                <i class="bi bi-quote quote-icon-right"></i>
               </p>
-
-              <p>
-                El salto a la fama vino con <strong>good kid, m.A.A.d city</strong> (2012), un álbum conceptual que mezcla storytelling cinematográfico, producción cuidada y colaboraciones clave. Con él, Kendrick consolidó su voz única en el hip hop contemporáneo.
-              </p>
-
-              <p>
-                En trabajos posteriores como <strong>To Pimp a Butterfly</strong> (inspirado por jazz, funk y soul) y <strong>DAMN.</strong>, el artista profundizó en cuestiones de identidad, raza, poder y trauma, recibiendo reconocimiento crítico y premios importantes. Su capacidad para reinventarse sin perder coherencia temática es una de sus señas de identidad.
-              </p>
-
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>"Kendrick tiene una visión rara: combina letras íntimas con arreglos sonoros ambiciosos. Trabajar en su música es empujar los límites del género."</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Colaborador">
-                  <h3>The Alchemist</h3>
-                  <h4>Productor</h4>
-                </div>
+              <div>
+                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Colaborador">
+                <h3>The Alchemist</h3>
+                <h4>Productor</h4>
               </div>
-
-              <p>
-                Además de su labor en estudio, Kendrick ha influido en la cultura musical por su enfoque conceptual y su compromiso con las historias de su comunidad. Proyectos recientes como <strong>Mr. Morale & The Big Steppers</strong> muestran una madurez artística que combina introspección personal y ambición sonora.
-              </p>
-
             </div>
-          </div>
 
+          </div>
         </div>
 
       </div>
 
-    </section><!-- /Gallery Details Section -->
+    </div>
+  </section>
 
   </main>
 
