--- a/letras.html
+++ b/letras.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contacto - Kendrick Lamar</title>
+  <title>Letras Destacadas - Kendrick Lamar</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -36,14 +36,14 @@
   ======================================================== -->
 </head>
 
-<body class="contact-page">
+<body class="starter-page-page">
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <img src="assets/img/logo.png" alt="">
-        <h1 class="sitename">ArtistFolio</h1>
+        <h1 class="sitename">PhotoFolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -65,7 +65,7 @@
           <!-- Separador, se oculta en dispositivos móviles -->
           <span class="nav-separator">|</span>
           <li><a href="services.html">Servicios</a></li>
-          <li><a href="contact.html" class="active">Contacto</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -81,88 +81,48 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Contacto</h1>
-              <p class="mb-0">¿Buscas información sobre proyectos, análisis de letras, prensa o reservas relacionadas con algún artista? Ponte en contacto y te responderemos con detalles sobre disponibilidad y servicios.</p>
+              <h1>Letras destacadas</h1>
+              <p class="mb-0">Las letras más impactantes de Kendrick Lamar, donde cada palabra cuenta una historia profunda y significativa.</p>
             </div>
           </div>
         </div>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <!-- Starter Section Section -->
+    <section id="starter-section" class="starter-section section">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Letras</h2>
+        <p>Letras con más profundidad y significado </p>
+      </div><!-- End Section Title -->
 
-        <div class="info-wrap" data-aos="fade-up" data-aos-delay="200">
-          <div class="row gy-5">
-
-            <div class="col-lg-4">
-              <div class="info-item d-flex align-items-center">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Ubicación</h3>
-                  <p>Sevilla, España</p>
-                </div>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="col-lg-4">
-              <div class="info-item d-flex align-items-center">
-                <i class="bi bi-telephone flex-shrink-0"></i>
-                <div>
-                  <h3>Teléfono</h3>
-                  <p>+1 800 000 0000</p>
-                </div>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="col-lg-4">
-              <div class="info-item d-flex align-items-center">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h3>Correo</h3>
-                  <p>contacto@artistfolio.com</p>
-                </div>
-              </div>
-            </div><!-- End Info Item -->
-
-          </div>
-        </div>
-
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
-          <div class="row gy-4">
-
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Nombre" required="">
-            </div>
-
-            <div class="col-md-6 ">
-              <input type="email" class="form-control" name="email" placeholder="Correo electrónico" required="">
-            </div>
-
-            <div class="col-md-12">
-              <input type="text" class="form-control" name="subject" placeholder="Asunto" required="">
-            </div>
-
-            <div class="col-md-12">
-              <textarea class="form-control" name="message" rows="6" placeholder="Mensaje" required=""></textarea>
-            </div>
-
-            <div class="col-md-12 text-center">
-              <div class="loading">Cargando</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Tu mensaje ha sido enviado. ¡Gracias!</div>
-
-              <button type="submit">Enviar Mensaje</button>
-            </div>
-
-          </div>
-        </form><!-- End Contact Form -->
-
+      <div class="container" data-aos="fade-up">
+        <h3>PRIDE.</h3>
+        <p>"I set free all you abusers, this is transformation" - Reflexiona sobre la lucha interna entre los valores espirituales y la tentación material, sugiriendo que en un mundo ideal la fe siempre prevalecería sobre la riqueza.</p>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6IZvVAP7VPPnsGX6bvgkqg?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
 
-    </section><!-- /Contact Section -->
+      <div class="container" data-aos="fade-up">
+        <h3>Count me out</h3>
+        <p>"I love when you count me out" - Representa un sentimiento de liberación al ser ignorado, permitiéndole escapar de la presión social y la necesidad de complacer a otros.</p>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/6BU1RZexmvJcBjgagVVt3M?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      </div>
+
+      <div class="container" data-aos="fade-up">
+        <h3>Watch the Party Die</h3>
+        <p>"God, give me life, dear God, please give me peace" - Kendrick busca aislamiento de la toxicidad de la industria y la cultura del espectáculo, priorizando su paz mental y espiritual.</p>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/episode/4AzSLkFn9MENzO5zbaBg7R?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      </div>
+
+      <div class="container" data-aos="fade-up">
+        <h3>Sing About Me, I'm Dying of Thirst</h3>
+        <p>"Sometimes I look in a mirror and ask myself: Am I really scared of passing away?" - Cuestiona la fragilidad de la vida y el miedo a morir antes de haber logrado una redención o dejado un legado significativo.</p>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1Z2FvDFZSDQ23s4BDqpWqZ?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      </div>
+
+    </section><!-- /Starter Section Section -->
 
   </main>
 
@@ -170,7 +130,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">ArtistFolio</strong> <span>Todos los derechos reservados</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">PhotoFolio</strong> <span>All Rights Reserved</span></p>
       </div>
     </div>
 
